# deep-research-lg

./: .gitignore  README.md  main.py  pyproject.toml  research_brief_eval.py
core/: prompts.py  research_agent_scope.py  state_research.py  state_scope.py  utils.py
