[project]
name = "deep-research-lg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.30.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.5",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
